--- a/style.css
+++ b/style.css
@@ -11,13 +11,17 @@ main{
 }
 
 header{
-    background-color: #333;
+    background-color: #969494;
     color: #fff;
     padding: 20px;
 }
 
 h1,h2{
     margin: 0;
+}
+nav {
+    display: flex;
+    background-color: bisque;
 }
 
 nav ul{
