--- a/style.css
+++ b/style.css
@@ -61,3 +61,17 @@ nav ul{
     border-style: solid;
     border-width:  1px;
 }
+
+@media screen and(max-width:992px){
+
+}
+
+@media screen and(max-width: 768px) {
+    main {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width:576px) {
+    
+}
