--- a/style.css
+++ b/style.css
@@ -1,37 +1,42 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
-    font-family:'Courier New', Courier, monospace;
+
+body {
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
 }
-main{
-    display:flex;
+
+main {
+    display: flex;
     flex-wrap: wrap;
     margin-top: 2%;
 }
 
-header{
+header {
     background-color: #969494;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
 
-h1,h2{
+h1,
+h2 {
     margin: 0;
 }
+
 nav {
-    background-color: bisque;
+    display: flex;
+    background-color: #d8a47f;
+}
+
+nav a {
+    color: #13293d;
+    padding: 14px 20px;
     text-decoration: none;
     text-align: center;
 }
 
-nav ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 .cards {
     flex: 4;
     background-color: #ffffff;
@@ -39,9 +44,9 @@ nav ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
+}
 
-.about{
+.about {
     flex: 1 0 200px;
     padding: 10px;
     text-align: center;
@@ -49,33 +54,31 @@ nav ul{
     border-width: 1px;
 }
 
-.education{
+.education {
     flex: 1 0 200px;
     padding: 10px;
     text-align: center;
-    border-style:solid;
+    border-style: solid;
     border-width: 1px;
 }
 
-.skills{
-    flex:1 0 200px;
+.skills {
+    flex: 1 0 200px;
     padding: 10px;
     text-align: center;
     border-style: solid;
     border-width: 1px;
 }
 
-.placeholder{
-    flex:  1 0 200px;
+.placeholder {
+    flex: 1 0 200px;
     padding: 10px;
     text-align: center;
     border-style: solid;
-    border-width:  1px;
+    border-width: 1px;
 }
 
-@media screen and(max-width:992px){
-
-}
+@media screen and(max-width:992px) {}
 
 @media screen and(max-width: 768px) {
     main {
@@ -83,6 +86,4 @@ nav ul{
     }
 }
 
-@media screen and (max-width:576px) {
-    
-}
+@media screen and (max-width:576px) {}
