--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav a {
     text-align: center;
 }
 
-.cards {
+.production{
     flex: 4;
     background-color: #ffffff;
     padding: 20px;
@@ -46,37 +46,25 @@ nav a {
     justify-content: center;
 }
 
-.about {
-    flex: 1 0 200px;
-    padding: 10px;
-    text-align: center;
+.card {
     border-style: solid;
     border-width: 1px;
-}
-
-.education {
-    flex: 1 0 200px;
+    border-radius: 10px;
     padding: 10px;
+    flex: 0 0 400px;
+  }
+  
+  .card header {
+    padding: 20px;
+  }
+  
+  .card p {
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.skills {
-    flex: 1 0 200px;
-    padding: 10px;
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.placeholder {
-    flex: 1 0 200px;
-    padding: 10px;
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-}
+  }
+  
+  .card img {
+    width: 100%;
+  }
 
 @media screen and(max-width:992px) {}
 
